--- a/BookOrganizer/Views/MainView.xaml
+++ b/BookOrganizer/Views/MainView.xaml
@@ -1,25 +1,28 @@
 ﻿<Window x:Class="BookOrganizer.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c="clr-namespace:BookOrganizer.Commands" Title="Main Window" Height="400" Width="800">
-    
+    xmlns:c="clr-namespace:BookOrganizer.Commands" Title="Book Organizer" Height="400" Width="800">
+
     <Window.Resources>
         <!-- Allows a KeyBinding to be associated with a command defined in the View Model  -->
         <c:CommandReference x:Key="ExitCommandReference" Command="{Binding ExitCommand}" />
     </Window.Resources>
-   
+
     <Window.InputBindings>
-        <KeyBinding Key="X" Modifiers="Control" Command="{StaticResource ExitCommandReference}" /> 
+        <KeyBinding Key="E" Modifiers="Control" Command="{StaticResource ExitCommandReference}" />
     </Window.InputBindings>
-    
+
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
-                <MenuItem Command="{Binding ExitCommand}" Header="E_xit" InputGestureText="Ctrl-X" />
+                <MenuItem Command="{Binding ExitCommand}" Header="E_xit" InputGestureText="Ctrl-E" />
             </MenuItem>
         </Menu>
-    
+
         <Grid>
+            <DataGrid HorizontalAlignment="Left" Margin="52,46,0,0" VerticalAlignment="Top" Height="273" Width="633">
+                <ColumnDefinition></ColumnDefinition>
+            </DataGrid>
             <!-- Add additional content here -->
         </Grid>
     </DockPanel>
