--- a/BookOrganizer/Views/MainView.xaml
+++ b/BookOrganizer/Views/MainView.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="BookOrganizer.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c="clr-namespace:BookOrganizer.Commands" Title="Book Organizer" Height="400" Width="800" WindowStartupLocation="CenterScreen">
+    xmlns:c="clr-namespace:BookOrganizer.Commands" 
+    xmlns:s ="clr-namespace:BookOrganizer.ViewModels"
+        Title="Book Organizer" Height="400" Width="800" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
         <!-- Allows a KeyBinding to be associated with a command defined in the View Model  -->
@@ -42,6 +44,7 @@
             </Grid.ColumnDefinitions>
             <DataGrid
                 ItemsSource="{Binding CurrentList}"
+                
                 AutoGenerateColumns="False"                                                 
                 CanUserDeleteRows="False"  
                 CanUserAddRows="False"            
@@ -87,7 +90,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Background="Transparent" Height="20" Width="20" Command="{Binding EditBookCommand}" CommandParameter="{Binding .Id}">
+                                <Button Background="Transparent" Height="20" Width="20" Command="{Binding DataContext.EditBookCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding .Id}">
                                     <Image Source="C:\Users\shmik\Desktop\BookOrganizer\BookOrganizer\edit.png"/>
                                 </Button>
                             </DataTemplate>
@@ -96,7 +99,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Background="Transparent" Height="20" Width="20" Command="{Binding DeleteBookCommand}" CommandParameter="{Binding .Id}">
+                                <Button Background="Transparent" Height="20" Width="20" Command="{Binding DataContext.DeleteBookCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding .Id}">
                                     <Image Source="C:\Users\shmik\Desktop\BookOrganizer\BookOrganizer\exit.png"/>
                                 </Button>
                             </DataTemplate>
